<resources>
    <string name="app_name">Self-Care-Companion</string>
    <string name="title_splash">Splash</string>
    <string name="title_home">Home</string>
    <string name="title_mood">Mood</string>
    <string name="title_journal">Journal</string>
    <string name="title_habits">Habits</string>
    <string name="title_profile">Profile</string>
    <string name="insights">Insights</string>
    <string name="home_button">Home Button</string>
    <string name="back_button">← BACK</string>
    <string name="next_button">NEXT →</string>
    <string name="journal_prompt">Would you like to reflect on today?</string>
    <string name="journal_prompt_text">Good evening!</string>
    <string name="yes_btn">Yes please</string>
    <string name="no_btn">Not right now</string>
    <string name="mood_prompt">How are you feeling today?</string>
    <string name="mood_option_1">Happy :)</string>
    <string name="mood_option_2">Sad :(</string>
    <string name="mood_option_3">Excited :D</string>
    <string name="mood_option_4">Stressed :|</string>
    <string name="mood_option_5">Calm ^_^</string>
    <string name="mood_option_6">Anxious >:(</string>
    <string name="self_care_companion">SELF-CARE COMPANION</string>
    <string name="hello">Hello!</string>
    <string name="check_in">Check In</string>
    <string name="track_habits">Track Habits</string>
    <string name="journal_button">Journal</string>
    <string name="habit_tracker">HABIT TRACKER</string>
    <string name="unit">unit</string>
    <string name="new_habit">New Habit</string>
    <string name="add_habit">+ ADD HABIT</string>
    <string name="save_today_s_habits">SAVE TODAY\'S HABITS</string>
    <string name="enter_units">Enter units (e.g., cals, hrs)</string>
    <string name="enter_habit_name">Enter habit name</string>
    <string name="enter_habit_value">Enter value</string>
</resources>