<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.self_care_companion.ui.splash.SplashFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.self_care_companion.ui.login.LoginFragment"
        android:label="Login" />

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.self_care_companion.ui.signup.SignUpFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.self_care_companion.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_journalNavFragment"
            app:destination="@id/navigation_journal_nobutton" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mood"
        android:name="com.example.self_care_companion.ui.mood.MoodFragment"
        android:label="@string/title_mood"
        tools:layout="@layout/fragment_mood" />

    <fragment
        android:id="@+id/navigation_journal"
        android:name="com.example.self_care_companion.ui.journal.JournalFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/navigation_habits"
        android:name="com.example.self_care_companion.ui.habits.HabitsFragment"
        android:label="@string/title_habits"
        tools:layout="@layout/fragment_habits" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.self_care_companion.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_insights"
        android:name="com.example.self_care_companion.ui.insights.InsightsFragment"
        android:label="@string/insights"
        tools:layout="@layout/fragment_insights" />

    <fragment
        android:id="@+id/navigation_journal_nobutton"
        android:name="com.example.self_care_companion.ui.journal.JournalNavFragment"
        android:label="Journal"
        tools:layout="@layout/fragment_journal_nav" />

    <action
        android:id="@+id/action_splashFragment_to_loginFragment"
        app:destination="@id/loginFragment" />

    <action
        android:id="@+id/action_splashFragment_to_signUpFragment"
        app:destination="@id/signUpFragment" />

    <action
        android:id="@+id/action_signUpFragment_to_loginFragment"
        app:destination="@id/loginFragment" />

    <action
        android:id="@+id/action_loginFragment_to_homeFragment"
        app:destination="@id/navigation_mood" />
</navigation>
