<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Home Button -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/button"
                android:src="@drawable/ic_home_black_24dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/title_home"/>
        </FrameLayout>

        <!-- Prompt Title -->
        <TextView
            android:id="@+id/text_journal_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_prompt_text"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp" />

        <!-- Prompt for Journal Reflection -->
        <TextView
            android:id="@+id/prompt_journal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_prompt"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp"/>

        <!-- Prompt Options -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:orientation="horizontal"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/yes_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:text="@string/yes_btn"
                android:textColor="#000000"
                android:backgroundTint="@color/button"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/no_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:text="@string/no_btn"
                android:textColor="#000000"
                android:backgroundTint="@color/button"
                style="?android:attr/buttonBarButtonStyle"/>
        </GridLayout>
    </LinearLayout>
</ScrollView>
